--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,3 +44,7 @@ jobs:
           restore-keys: ${{ runner.os }}-m2
       - name: Build with Maven
         run: mvn package -DskipTests
+      - name: run
+        run: &java -jar webgoat-server-8.1.0.jar
+      - name: check
+        run: curl http://127.0.0.1:8080/WebGoat
