--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,6 +45,6 @@ jobs:
       - name: Build with Maven
         run: mvn package -DskipTests
       - name: run
-        run: &java -jar webgoat-server-8.1.0.jar
+        run: java -jar webgoat-server-8.1.0.jar &
       - name: check
         run: curl http://127.0.0.1:8080/WebGoat
