--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,5 +46,8 @@ jobs:
         run: mvn package -DskipTests
       - name: run
         run: java -jar /home/runner/work/WebGoat/WebGoat/webgoat-server/target/webgoat-server-8.2.0.jar &
+      - name: Sleep for 30 seconds
+        run: sleep 30s
+        shell: bash
       - name: check
         run: curl http://127.0.0.1:8080/WebGoat
